--- a/my_model.ipynb
+++ b/my_model.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "my_model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMXyYn6zV2sJ4ncWUDgv9nK"
+      "authorship_tag": "ABX9TyMhPjpSRyc4yXsNqTxBA4GC",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/juhitiwari/BrainMRI/blob/master/my_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -247,7 +258,20 @@
         "    # Create model. This creates your Keras model instance, you'll use this instance to train/test the model.\n",
         "    model = Model(inputs = X_input, outputs = X, name='BrainDetectionModel')\n",
         "    \n",
-        "    return model"
+        "    return model\n",
+        "  \n",
+        "def plot_confusion_matrix_bp():\n",
+        "  from mlxtend.plotting import plot_confusion_matrix\n",
+        "\n",
+        "  import matplotlib.pyplot as plt\n",
+        "  import numpy as np\n",
+        "\n",
+        "  binary1 = np.array([[68, 33],\n",
+        "                    [10, 89]])\n",
+        "\n",
+        "  fig, ax = plot_confusion_matrix(conf_mat=binary1)\n",
+        "  plt.show()\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -264,20 +288,7 @@
         "outputId": "e20a04fc-4736-4105-a02a-649585b4e9b8"
       },
       "source": [
-        "\n",
-        "def plot_confusion_matrix_bp():\n",
-        "  from mlxtend.plotting import plot_confusion_matrix\n",
-        "\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  import numpy as np\n",
-        "\n",
-        "  binary1 = np.array([[68, 33],\n",
-        "                    [10, 89]])\n",
-        "\n",
-        "  fig, ax = plot_confusion_matrix(conf_mat=binary1)\n",
-        "  plt.show()\n",
-        "\n",
-        "plot_confusion_matrix_bp()"
+        "\n"
       ],
       "execution_count": 10,
       "outputs": [
