--- a/my_model.ipynb
+++ b/my_model.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "my_model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMhPjpSRyc4yXsNqTxBA4GC",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOpdjo5NdM8FWJShl4Srdw9"
     },
     "kernelspec": {
       "name": "python3",
@@ -14,16 +13,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/juhitiwari/BrainMRI/blob/master/my_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -258,20 +247,7 @@
         "    # Create model. This creates your Keras model instance, you'll use this instance to train/test the model.\n",
         "    model = Model(inputs = X_input, outputs = X, name='BrainDetectionModel')\n",
         "    \n",
-        "    return model\n",
-        "  \n",
-        "def plot_confusion_matrix_bp():\n",
-        "  from mlxtend.plotting import plot_confusion_matrix\n",
-        "\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  import numpy as np\n",
-        "\n",
-        "  binary1 = np.array([[68, 33],\n",
-        "                    [10, 89]])\n",
-        "\n",
-        "  fig, ax = plot_confusion_matrix(conf_mat=binary1)\n",
-        "  plt.show()\n",
-        "\n"
+        "    return model\n"
       ],
       "execution_count": 0,
       "outputs": []
