--- a/my_model.ipynb
+++ b/my_model.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "my_model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOpdjo5NdM8FWJShl4Srdw9"
+      "authorship_tag": "ABX9TyOonOjrOg+Cb3Yknk4kJueq",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -13,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/juhitiwari/BrainMRI/blob/master/my_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -216,6 +227,12 @@
         "\n",
         "\n",
         "def build_model(input_shape):\n",
+        "    import tensorflow as tf\n",
+        "    from tensorflow.keras.layers import Conv2D, Input, ZeroPadding2D, BatchNormalization, Activation, MaxPooling2D, Flatten, Dense\n",
+        "    from tensorflow.keras.models import Model, load_model\n",
+        "    from tensorflow.keras.callbacks import TensorBoard, ModelCheckpoint\n",
+        "    from sklearn.model_selection import train_test_split\n",
+        "    from sklearn.metrics import f1_score\n",
         "    \"\"\"\n",
         "    Arugments:\n",
         "        input_shape: A tuple representing the shape of the input of the model. shape=(image_width, image_height, #_channels)\n",
